sfdx-source/apex-queue/main/objects/QueueError__c/QueueError__c.object-meta.xml
<CustomObject>
    <description>Stores queue-level operational failures, optionally linked to the related queue job or native async execution.</description>
    <label>Queue Error</label>
    <nameField>
        <displayFormat>QueueError-{00000000}</displayFormat>
        <label>Queue Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Errors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>