sfdx-source/apex-queue/main/objects/QueueError__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>Platform async job id associated with the operational failure when the framework can correlate the error to native async execution.</description>
    <inlineHelpText>Native async job id related to this queue error when available.</inlineHelpText>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>