sfdx-source/apex-queue/main/objects/QueueError__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Queue subsystem component or phase that failed.</description>
    <inlineHelpText>Queue subsystem component or phase that failed.</inlineHelpText>
    <label>Component</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>