sfdx-source/apex-queue/main/objects/QueueError__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional lookup to the queue job that was being operated on when this error was recorded.</description>
    <inlineHelpText>Queue job related to this operational error when the framework can identify one.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Queue Errors</relationshipLabel>
    <relationshipName>QueueErrors</relationshipName>
    <type>Lookup</type>
</CustomField>