sfdx-source/apex-queue/main/objects/QueueError__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Failure message recorded for the queue-level error.</description>
    <inlineHelpText>Failure message recorded for the queue-level error.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>