sfdx-source/apex-queue/main/objects/QueueError__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>Timestamp when the queue-level failure occurred.</description>
    <inlineHelpText>Timestamp when the queue-level failure occurred.</inlineHelpText>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>