sfdx-source/apex-queue/main/objects/QueueError__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Queue name associated with the failure.</description>
    <inlineHelpText>Queue name associated with the failure.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>