sfdx-source/apex-queue/main/objects/QueueError__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Stack trace captured for the queue-level error.</description>
    <inlineHelpText>Stack trace captured for the queue-level error.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>